[gd_scene load_steps=19 format=3 uid="uid://cyctgnqsxsnqf"]

[ext_resource type="Texture2D" uid="uid://chgi55sdx26uv" path="res://enemies/flying_enemy.png" id="1_chy3y"]
[ext_resource type="Script" path="res://enemies/flying_enemy.gd" id="1_udj75"]
[ext_resource type="PackedScene" uid="uid://c1br858hwlc05" path="res://enemies/enemy.tscn" id="2_tbtvt"]
[ext_resource type="PackedScene" uid="uid://5uy3efkbsge6" path="res://collisions/hurtbox.tscn" id="3_nron6"]
[ext_resource type="PackedScene" uid="uid://dsyg0t3624o83" path="res://collisions/hitbox.tscn" id="4_sf3ki"]
[ext_resource type="Script" path="res://enemies/stats.gd" id="5_2iooe"]
[ext_resource type="PackedScene" uid="uid://bt0stmjftwou3" path="res://enemies/waypoint_pathfinding.tscn" id="6_3hhuw"]
[ext_resource type="PackedScene" uid="uid://bwdq65xhu11si" path="res://enemies/enemy_health_bar.tscn" id="7_sfw1v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o38oy"]
atlas = ExtResource("1_chy3y")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_myfap"]
atlas = ExtResource("1_chy3y")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jufi1"]
atlas = ExtResource("1_chy3y")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_norv8"]
atlas = ExtResource("1_chy3y")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v03o"]
atlas = ExtResource("1_chy3y")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl4qo"]
atlas = ExtResource("1_chy3y")
region = Rect2(320, 0, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_wuf7g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o38oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myfap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jufi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_norv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v03o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl4qo")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ln1aa"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t4oen"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iov5k"]
radius = 7.07107

[node name="FlyingEnemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_udj75")

[node name="Enemy" parent="." instance=ExtResource("2_tbtvt")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wuf7g")
autoplay = "default"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ln1aa")

[node name="Hurtbox" parent="." instance=ExtResource("3_nron6")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_t4oen")

[node name="Hitbox" parent="." instance=ExtResource("4_sf3ki")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_iov5k")

[node name="Stats" type="Node" parent="."]
script = ExtResource("5_2iooe")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="WaypointPathfinding" parent="." instance=ExtResource("6_3hhuw")]

[node name="EnemyHealthBar" parent="." instance=ExtResource("7_sfw1v")]
offset_left = -26.0
offset_top = -32.0
offset_right = 26.0
offset_bottom = -24.0
metadata/_edit_use_anchors_ = true

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
